Bug 66991 - Scrolling broken with window on top [SNA] in 2.21.12
Summary: Scrolling broken with window on top [SNA] in 2.21.12
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-17 09:30 UTC by Clemens Eisserer
Modified: 2013-07-17 09:59 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot (865.34 KB, image/jpeg)
2013-07-17 09:30 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2013-07-17 09:30:54 UTC
Created attachment 82536 [details]
screenshot

On my SNB laptop (running xfce with no composition manager), when scrolling within an application which has a window on top, the background application isn't re-painted with 2.21.12.
Instead, the content of the top-level window is "scrolled".

Please find a screenshot of the issue attached.

Side note: Current git ( 3f3071c6c91c3907cb0fecf2f69a995feefe7956 ) is completely broken on my system. Scrolling doesn't seem to honor clipping and I get frequent crashes.
Comment 1 Chris Wilson 2013-07-17 09:44:05 UTC
Describe the crashes, please. I thought I had the scroll regression understood, but you make it sound like I just opened a can of worms instead.
Comment 2 Chris Wilson 2013-07-17 09:54:31 UTC
commit a764a6e69b23f644957cf3e4e98868464f458758
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jul 17 10:51:56 2013 +0100

    sna: Fix typo in computing box intersection
    
    Comparing y2 against y1 for the intersection was a silly typo,
    especially as the routine for computing the intersection already
    existed.
    
    Fixes regression in commit 34c9b759fbab8d548108e954d55de38c6f5bec31
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Tue Jul 16 19:39:37 2013 +0100
    
        sna: Note that borderClip region may be more than a singular box
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66991
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

That should fixing the scrolling and all fallout.
Comment 3 Clemens Eisserer 2013-07-17 09:59:26 UTC
Everything seems back to normal.
Thanks :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.