sna: Fix typo in computing box intersection

Comparing y2 against y1 for the intersection was a silly typo,
especially as the routine for computing the intersection already
existed.

Fixes regression in commit 34c9b759fbab8d548108e954d55de38c6f5bec31
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jul 16 19:39:37 2013 +0100

    sna: Note that borderClip region may be more than a singular box

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66991
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>